--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   ### Packages needed for the build/install process
   - conda-build>=3.26.0
   - coverage>=7.2.7
-  - cython
+  - cython==3.0.12
   - flake8>=6.0.0
   - diff-cover>=7.7.0
   - pip>=23.2.1
