--- a/setup/environment_dydx.yml
+++ b/setup/environment_dydx.yml
@@ -4,10 +4,10 @@ channels:
   - defaults
 dependencies:
   ### Packages needed for the build/install process
-  - backports>=1.0
+  - dydxprotocol-v4-proto-py
   - conda-build>=3.26.0
   - coverage>=7.2.7
-  - cython
+  - cython==3.0.12
   - flake8>=6.0.0
   - diff-cover>=7.7.0
   - pip>=23.2.1
@@ -28,9 +28,8 @@ dependencies:
   - cachetools>=5.3.1
   - commlib-py>=0.11
   - cryptography>=41.0.2
-  - dydxprotocol-v4-proto-py
+  - injective-py==1.10.*
   - eth-account >=0.13.0
-  - gql-with-aiohttp>=3.4.1
   - msgpack-python
   - numpy>=1.25.0,<2
   - objgraph
