--- a/setup/environment_dydx.yml
+++ b/setup/environment_dydx.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
 dependencies:
   ### Packages needed for the build/install process
-  - dydxprotocol-v4-proto-py
+  - backports>=1.0
   - conda-build>=3.26.0
   - coverage>=7.2.7
   - cython==3.0.12
@@ -28,8 +28,9 @@ dependencies:
   - cachetools>=5.3.1
   - commlib-py>=0.11
   - cryptography>=41.0.2
-  - injective-py==1.10.*
+  - dydxprotocol-v4-proto-py
   - eth-account >=0.13.0
+  - gql-with-aiohttp>=3.4.1
   - msgpack-python
   - numpy>=1.25.0,<2
   - objgraph
