feat: docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   hummingbot:
     container_name: hummingbot
-    image: hummingbot/hummingbot:latest
+    # image: hummingbot/hummingbot:latest
     build:  # Uncomment this and comment image if you want to build it locally
       context: .
       dockerfile: Dockerfile
